# juniper-poc

./: .gitignore  Cargo.toml
migrations/2024-04-30-031051_users/: up.sql
src/: database.rs  main.rs  schema.rs
src/graphql/: schema.rs
src/models/: user.rs
src/server/: mod.rs
src/settings/: constants.rs  env.rs  mod.rs
