[package]
name = "juniper-poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-web-lab = "0.20.2"
argon2 = "0.5.3"
diesel = { version = "2.1.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
juniper = "0.16.1"
uuid = { version = "1.8.0", features = ["v4"] }
